feat: add correct birth_date and age_in_years age_over_nn based on birth_date
Moreover, fixes in static pages and a temporary work-around with client_id.

Signed-off-by: Bjorn Molin <extern.bjorn.molin@digg.se>